--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,14 @@
         android:theme="@style/Theme.pil"
         tools:targetApi="31">
         <activity
-            android:name=".testActivity"
+            android:name=".pages.fragment.BookDetails"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".pages.fragment.Books"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -55,7 +62,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
